--- a/site.html
+++ b/site.html
@@ -25,34 +25,29 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(160deg,#0F2557 0%,#1E3A8A 30%,#2563EB 65%,#3B82F6 100%);position:relative;overflow:hidden;padding:56px 20px 48px;text-align:center}
-.hero::before{content:'';position:absolute;top:-50%;right:-30%;width:80%;height:200%;background:radial-gradient(ellipse,rgba(59,130,246,0.2) 0%,transparent 70%);pointer-events:none}
-.hero::after{content:'';position:absolute;bottom:-40%;left:-20%;width:60%;height:150%;background:radial-gradient(ellipse,rgba(6,182,212,0.1) 0%,transparent 70%);pointer-events:none}
-.hero-logo{position:relative;z-index:1;margin:0 auto 24px;animation:subtleGlow 3s ease-in-out infinite}
-.hero-logo svg{width:100px;height:108px}
+.hero{background:linear-gradient(160deg,#0A1628 0%,#0F2050 30%,#1A3570 60%,#1E3A8A 100%);position:relative;overflow:hidden;padding:40px 20px 36px;text-align:center}
+.hero::before{content:'';position:absolute;top:-50%;right:-30%;width:80%;height:200%;background:radial-gradient(ellipse,rgba(43,125,233,0.12) 0%,transparent 70%);pointer-events:none}
+.hero::after{content:'';position:absolute;bottom:-40%;left:-20%;width:60%;height:150%;background:radial-gradient(ellipse,rgba(6,182,212,0.06) 0%,transparent 70%);pointer-events:none}
+.hero-logo{position:relative;z-index:1;margin:0 auto 16px}
+.hero-logo img{border-radius:8px;box-shadow:0 4px 20px rgba(0,0,0,0.3)}
 .hero-title{position:relative;z-index:1;font-size:1.85rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.15;animation:fadeUp 0.8s ease-out}
 .hero-auth{position:relative;z-index:1;font-size:0.7rem;color:rgba(255,255,255,0.45);text-transform:uppercase;letter-spacing:3px;margin-top:10px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
 .hero-line{width:50px;height:1.5px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.4),transparent);margin:14px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
-.hero-props{position:relative;z-index:1;display:flex;justify-content:center;gap:0;margin-top:32px;animation:fadeUpDelay1 0.8s ease-out 0.35s backwards}
-.hero-prop{text-align:center;flex:1;max-width:160px;padding:0 16px}
-.hero-prop-icon{font-size:1.3rem;margin-bottom:6px;display:block;opacity:0.9}
-.hero-prop-label{font-size:0.58rem;text-transform:uppercase;letter-spacing:1.2px;color:rgba(255,255,255,0.5);font-weight:600;margin-bottom:4px;display:block}
-.hero-prop-text{font-size:0.82rem;font-weight:800;color:#fff;line-height:1.2}
-.hero-prop+.hero-prop{border-left:1px solid rgba(255,255,255,0.12)}
-.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:20px;flex-wrap:wrap;margin-top:28px;font-size:0.72rem;color:rgba(255,255,255,0.45);font-weight:500}
-.hero-stats span{animation:statPop 0.5s ease-out backwards}
+/* hero props removed */
+.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.5);font-weight:500}
+.hero-stats span{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.12);padding:5px 12px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
 .hero-stats span:nth-child(1){animation-delay:0.5s}
 .hero-stats span:nth-child(2){animation-delay:0.6s}
 .hero-stats span:nth-child(3){animation-delay:0.7s}
 .hero-stats span:nth-child(4){animation-delay:0.8s}
-.hero-stats strong{color:#fff;font-size:1.1rem;display:block;margin-bottom:1px}
-.hero-btns{position:relative;z-index:1;margin-top:28px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
+.hero-stats strong{color:rgba(255,255,255,0.9)}
+.hero-btns{position:relative;z-index:1;margin-top:22px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap;animation:fadeUpDelay2 0.8s ease-out 0.5s backwards}
 .btn-primary{background:#fff;color:#1E3A8A;border:none;padding:12px 28px;border-radius:8px;font-size:0.82rem;font-weight:800;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,box-shadow 0.2s ease;box-shadow:0 2px 12px rgba(0,0,0,0.15)}
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:11px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
 .btn-primary:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.2)}
 .btn-outline:hover{border-color:#fff;transform:translateY(-2px)}
 .hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.2);font-style:italic;margin-top:28px;letter-spacing:0.5px}
-@media(max-width:640px){.hero{padding:40px 16px 36px}.hero-title{font-size:1.5rem}.hero-logo svg{width:80px;height:86px}.hero-props{flex-direction:column;gap:0;align-items:center;max-width:240px;margin-left:auto;margin-right:auto}.hero-prop{max-width:none;width:100%;padding:14px 0}.hero-prop+.hero-prop{border-left:none;border-top:1px solid rgba(255,255,255,0.1)}.hero-stats{gap:12px}.hero-stats strong{font-size:1rem;display:inline;margin:0}.hero-stats span{display:inline}}
+@media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}.hero-logo img{width:90px!important}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -299,16 +294,12 @@ if (document.readyState === 'loading') {
 <div class="hero-title">PEPTIDE RESOURCE CENTER</div>
 <div class="hero-auth">The Peptide Authority</div>
 <div class="hero-line"></div>
-<div class="hero-props">
-<div class="hero-prop"><span class="hero-prop-label">Vendor Directory</span><span class="hero-prop-text">393 Vendors Reviewed</span></div>
-<div class="hero-prop"><span class="hero-prop-label">Price Comparison</span><span class="hero-prop-text">387 Products Tracked</span></div>
-<div class="hero-prop"><span class="hero-prop-label">Education</span><span class="hero-prop-text">Research-Grade Info</span></div>
-</div>
+<p class="hero-sub">Your comprehensive destination for research peptide resources, education, and vendor intelligence</p>
 <div class="hero-stats">
 <span><strong>393</strong> Vendors Reviewed</span>
 <span><strong>387</strong> Products Compared</span>
-<span><strong>23+</strong> Vendors Tracked</span>
-<span><strong>2026</strong> Updated</span>
+<span><strong>10</strong> Categories</span>
+<span><strong>Updated</strong> Feb 2026</span>
 </div>
 <div class="hero-btns">
 <label for="tab-resources" class="btn-primary" onclick="switchTab('tab-resources');return false">Explore Resources</label>
