--- a/site.html
+++ b/site.html
@@ -25,7 +25,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(160deg,#0A1628 0%,#0F2050 30%,#1A3570 60%,#1E3A8A 100%);position:relative;overflow:hidden;padding:40px 20px 36px;text-align:center}
+.hero{background:linear-gradient(135deg,#1E3A8A 0%,#2563EB 40%,#3B82F6 70%,#60A5FA 100%);position:relative;overflow:hidden;padding:40px 20px 36px;text-align:center}
 .hero::before{content:'';position:absolute;top:-50%;right:-30%;width:80%;height:200%;background:radial-gradient(ellipse,rgba(43,125,233,0.12) 0%,transparent 70%);pointer-events:none}
 .hero::after{content:'';position:absolute;bottom:-40%;left:-20%;width:60%;height:150%;background:radial-gradient(ellipse,rgba(6,182,212,0.06) 0%,transparent 70%);pointer-events:none}
 .hero-logo{position:relative;z-index:1;margin:0 auto 16px}
@@ -46,7 +46,8 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:11px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
 .btn-primary:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.2)}
 .btn-outline:hover{border-color:#fff;transform:translateY(-2px)}
-.hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.2);font-style:italic;margin-top:28px;letter-spacing:0.5px}
+.hero-sub{position:relative;z-index:1;font-size:0.88rem;color:#fff;margin-top:14px;line-height:1.5;max-width:520px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards}
+.hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
 @media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}.hero-logo img{width:90px!important}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
