--- a/site.html
+++ b/site.html
@@ -30,11 +30,11 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .hero::after{content:'';position:absolute;bottom:-40%;left:-20%;width:60%;height:150%;background:radial-gradient(ellipse,rgba(6,182,212,0.06) 0%,transparent 70%);pointer-events:none}
 .hero-logo{position:relative;z-index:1;margin:0 auto 16px}
 .hero-logo img{border-radius:8px;box-shadow:0 4px 20px rgba(0,0,0,0.3)}
-.hero-title{position:relative;z-index:1;font-size:1.85rem;font-weight:900;color:#fff;letter-spacing:-0.5px;line-height:1.15;animation:fadeUp 0.8s ease-out}
-.hero-auth{position:relative;z-index:1;font-size:0.7rem;color:rgba(255,255,255,0.45);text-transform:uppercase;letter-spacing:3px;margin-top:10px;font-weight:500;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
+.hero-title{position:relative;z-index:1;font-size:1.4rem;font-weight:900;color:#fff;letter-spacing:-0.3px;line-height:1.15;animation:fadeUp 0.8s ease-out;white-space:nowrap}
+.hero-auth{position:relative;z-index:1;font-size:0.7rem;color:#fff;text-transform:uppercase;letter-spacing:3px;margin-top:10px;font-weight:600;animation:fadeUpDelay1 0.8s ease-out 0.2s backwards}
 .hero-line{width:50px;height:1.5px;background:linear-gradient(90deg,transparent,rgba(255,255,255,0.4),transparent);margin:14px auto 0;animation:lineGrow 1s ease-out 0.6s backwards;position:relative;z-index:1}
 /* hero props removed */
-.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.5);font-weight:500}
+.hero-stats{position:relative;z-index:1;display:flex;justify-content:center;gap:8px;flex-wrap:wrap;margin-top:20px;font-size:0.72rem;color:rgba(255,255,255,0.85);font-weight:500}
 .hero-stats span{background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.12);padding:5px 12px;border-radius:20px;animation:statPop 0.5s ease-out backwards}
 .hero-stats span:nth-child(1){animation-delay:0.5s}
 .hero-stats span:nth-child(2){animation-delay:0.6s}
@@ -46,9 +46,9 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:11px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none;transition:transform 0.2s ease,border-color 0.2s ease,box-shadow 0.2s ease}
 .btn-primary:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.2)}
 .btn-outline:hover{border-color:#fff;transform:translateY(-2px)}
-.hero-sub{position:relative;z-index:1;font-size:0.88rem;margin-top:14px;line-height:1.5;max-width:520px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards;background:linear-gradient(90deg,#fff,#93c5fd,#fff);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;font-weight:500}
-.hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.25);font-style:italic;margin-top:24px;letter-spacing:0.5px}
-@media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}.hero-logo img{width:90px!important}}
+.hero-sub{position:relative;z-index:1;font-size:0.85rem;color:#fff;margin-top:14px;line-height:1.5;max-width:520px;margin-left:auto;margin-right:auto;animation:fadeUpDelay1 0.8s ease-out 0.3s backwards;font-weight:400}
+.hero-research{position:relative;z-index:1;font-size:0.65rem;color:rgba(255,255,255,0.6);font-style:italic;margin-top:24px;letter-spacing:0.5px}
+@media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.15rem}.hero-logo img{width:90px!important}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
