--- a/site.html
+++ b/site.html
@@ -25,7 +25,7 @@ h1,h2,h3,h4,h5,h6,.header-title,.hero-title,.res-section h3,.modal-name,.calc-ti
 .header-nav label,.header-nav a{font-size:0.82rem;color:#64748b;text-decoration:none;cursor:pointer;font-weight:500;padding:4px 0;border-bottom:2px solid transparent;transition:color 0.15s}
 .header-nav label:hover,.header-nav a:hover{color:#0A1628}
 @media(max-width:640px){.header-nav{display:none}}
-.hero{background:linear-gradient(170deg,#080E1E 0%,#0C1A3A 30%,#111E45 60%,#162050 100%);position:relative;overflow:hidden;padding:48px 20px 44px;text-align:center}
+.hero{background:linear-gradient(170deg,#091636 0%,#0C1F4A 40%,#0E2250 70%,#12285A 100%);position:relative;overflow:hidden;padding:48px 20px 44px;text-align:center}
 .hero::before{content:'';position:absolute;top:0;right:0;width:100%;height:100%;background:radial-gradient(ellipse at 50% 0%,rgba(43,125,233,0.1) 0%,transparent 60%);pointer-events:none}
 .hero::after{content:'';position:absolute;bottom:0;left:0;width:100%;height:4px;background:linear-gradient(90deg,#2B7DE9,#06B6D4,#2B7DE9);pointer-events:none}
 .hero-logo{position:relative;z-index:1;margin:0 auto 24px}
